# kitchinv-display

./: .gitignore  LICENSE  Makefile  README.md  main.py  manifest  pyproject.toml  requirements.txt  uijrtu2psvqhqlkgafpuqn6vcmtr8jb6  version.py
.beads/: metadata.json
.github/workflows/: ci.yml  release.yml
features/: dev.ini  prod.ini
lib/: battery.py  buttons.py  cache.py  config.py  cycle.py  display.py  dns.py  epd7in5.py  features.py  kitchinv.py  kitchinvdb.py  logger.py  ota.py  portal.py  renderer.py  sleep.py  wifi.py
lib/states/: active.py  config.py  deep_sleep.py
